feat: add copy button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <label for="uppercase">Letras maiúsculas</label>
                           </div>
                           <div class="checkbox-wrapper">
-                            <input type="checkbox" id="lowercase">
+                            <input type="checkbox" id="lowercase" class="filled">
                             <label for="lowercase">Letras minúsculas</label>
                           </div>
                           <div class="checkbox-wrapper">
@@ -54,9 +54,9 @@
                           </div>
                     </form>
                 </div>
-                <div>
+                <div class="force-wrapper">
                     <p class="settings-description"> Força da senha</p>
-                    <div class="force-wrapper">
+                    <div class="force-box-wrapper">
                         <div class="box weak">&nbsp;</div>
                         <div class="box">&nbsp;</div>
                         <div class="box">&nbsp;</div>
@@ -70,6 +70,7 @@
             </div>
 
         </div>
+        <button class="copy-button">Copiar senha</button>
     </div>
     <script src="js/script.js"></script>
 </body>
