feat: add number characters input

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div class="characters-number">
                     <p class="settings-description">Número de caracteres</p>
                     <input type="range" class="input-range"/>
+                    <input class="input-typed">
                 </div>
                 <div class="password-type-checkbox">
                     <p class="settings-description">Características da senha</p>
