feat: add password strength logic

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="actions-wrapper">
                     <img src="/assets/copy.svg" alt="Copuar" width="32" height="32"/>
-                    <img src="/assets/refresh.svg" alt="Gerar" width="32" height="32" id="generate-new-password"/>
+                    <img src="/assets/refresh.svg" alt="Gerar" width="32" height="32" class="generate-new-password"/>
                 </div>
             </div>
             <div class="settings-container">
@@ -71,7 +71,7 @@
                 </div>
 
             </div>
-            <button class="copy-button">Copiar senha</button>
+            <button class="copy-button generate-new-password">Gerar senha</button>
         </div>
         <script src="js/script.js"></script>
     </body>
