fix: icon import

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <p class="password-text"></p>
         </div>
         <div class="actions-wrapper">
-          <img src="/assets/copy.svg" alt="Copiar" width="32" height="32" class="copy-button" />
-          <img src="/assets/refresh.svg" alt="Gerar" width="32" height="32" class="generate-new-password" />
+          <img src="./assets/copy.svg" alt="Copiar" width="32" height="32" class="copy-button" />
+          <img src="./assets/refresh.svg" alt="Gerar" width="32" height="32" class="generate-new-password" />
         </div>
       </div>
       <div class="settings-container">
