--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="content-wrapper">
-      <img src="/assets/unlock.svg" alt="Cadeado" width="37" height="37" />
+      <img src="./assets/unlock.svg" alt="Cadeado" width="37" height="37" />
       <h1>Gerador de senhas</h1>
       <p class="subtitle">Gere instantaneamente uma senha aleatória e segura teste</p>
       <div class="password-container-card">
